# tidyup

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: tidydownloads.rb  tidyup.rb
scripts/: stress_benchmark.py
src/tidydownloads/: __init__.py  __main__.py  apple_fm_client.py  benchmark.py  classifier.py  cli.py  config.py  content.py  helpers.py  journal.py  logger_setup.py  mover.py  ollama_client.py  prompts.py  scanner.py  stager.py  taxonomy.py
src/tidydownloads/web/: server.py
src/tidydownloads/web/static/: app.js  style.css
src/tidydownloads/web/templates/: review.html
src/tidyup/: __init__.py  __main__.py  apple_fm_client.py  benchmark.py  cli.py  config.py  content.py  helpers.py  install.py  journal.py  json_repair.py  logger_setup.py  mover.py  ollama_client.py  organizer.py  progress.py  prompts.py  scanner.py
tests/: conftest.py  test_check_ollama_setup.py  test_classifier.py  test_cli.py  test_content.py  test_install.py  test_journal.py  test_json_repair.py  test_mover.py  test_organizer.py  test_scanner.py  test_stager.py  test_taxonomy.py  test_web.py
