[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidydownloads"
version = "0.1.0"
description = "Local AI-powered download organizer using Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Federico Reppucci"},
]
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tidydownloads = "tidydownloads.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
