[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidyup"
version = "0.4.1"
description = "Local AI-powered download organizer using Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Federico Reppucci"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
tidyup = "tidyup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tidyup = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
tag_format = "v{version}"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
